--- a/theme.html
+++ b/theme.html
@@ -344,7 +344,7 @@
       {/block:PostNotes}
       
       {block:PermalinkPage}
-        <div id="disqus_thread"></div>
+        <!-- <div id="disqus_thread"></div>
         <script type="text/javascript">
             var disqus_shortname = 'k3n'; 
 
@@ -354,7 +354,7 @@
                 dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
                 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
             })();
-        </script>
+        </script> -->
       {/block:PermalinkPage}
       
       <!-- Pagination -->
