--- a/theme.html
+++ b/theme.html
@@ -175,13 +175,13 @@
     }
 
     div.post.video h2,
-    div.post.video .caption p:nth-child(1) {
+    div.post.video .caption > p:nth-child(1) {
       margin: .5em 0 .05em 0;
       font-size: 1.4em;
       color: #333;      
     }
 
-    div.post.video .caption p:nth-child(2) {
+    div.post.video .caption > p:nth-child(2) {
       margin: 0;
       line-height: 1.4em;
     }
