update quote formatting to allow paragraphs in the source

--- a/theme.html
+++ b/theme.html
@@ -290,7 +290,7 @@
           {block:Quote}
             <blockquote>{Quote}</blockquote>
             {block:Source}
-              <p class="source"><em>&mdash;{Source}</em></p>
+              <div class="source">{Source}</div>
             {/block:Source}
           {/block:Quote}
     
