--- a/theme.html
+++ b/theme.html
@@ -15,6 +15,7 @@
     
     {block:Description}<meta name="description" content="{MetaDescription}" />{/block:Description}
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
     <link rel="shortcut icon" href="{Favicon}" />
     <link rel="apple-touch-icon" href="{PortraitURL-128}"/>
     <link rel="alternate" type="application/rss+xml" href="{RSS}" />    
@@ -125,6 +126,7 @@
     #wrapper {
       width: 720px;
       margin: 1em auto;
+      max-width: 92%;
     }
 
     div.post {
